--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,16 +44,6 @@ a {
   overflow-x: hidden;
 }
 
-.track {
-  position: absolute;
-  white-space: nowrap;
-  will-change: transform;
-  animation: marquee 15s linear infinite;
-  width: 180%;
-}
-.track:hover {
-  animation-play-state: paused;
-}
 @keyframes marquee {
   from {
     transform: translateX(0);
@@ -158,6 +148,8 @@ span.text-red {
   margin-top: 4px;
 }
 .hero-banner-container h1 {
+  position: relative;
+  z-index: 1;
   color: white;
   font-size: 10em;
   margin-left: -20px;
@@ -169,6 +161,7 @@ span.text-red {
   right: 20%;
   width: 450px;
   height: 450px;
+  z-index: 0;
 }
 
 .desc {
@@ -222,6 +215,8 @@ span.text-red {
   justify-content: space-between;
 }
 .banner-desc button {
+  position: relative;
+  z-index: 1;
   border-radius: 15px;
   padding: 10px 16px;
   background-color: white;
@@ -241,20 +236,26 @@ span.text-red {
   margin: 18px;
 }
 .footer-banner-image {
+  z-index: -1;
   position: absolute;
   /* top: -35%;
   left: 8%; */
   top: -25%;
   left: 25%;
+  z-index: 0;
 }
 .banner-desc .right {
   line-height: 1.4;
 }
 .banner-desc .right h3 {
+  z-index: 1;
+  position: relative;
   font-weight: 800;
   font-size: 60px;
 }
 .banner-desc .right p {
+  z-index: 1;
+  position: relative;
   font-size: 18px;
 }
 .banner-desc .right .company-desc {
@@ -613,10 +614,10 @@ span.text-red {
     height: 560px;
   }
   .hero-banner-image {
-    width: 77%;
-    height: 62%;
-    top: -2%;
-    right: -6%;
+    width: 75%;
+    height: 60%;
+    top: 0%;
+    right: -5%;
   }
   .footer-banner-container {
     height: 560px;
@@ -654,9 +655,12 @@ span.text-red {
   }
   .hero-banner-container h1 {
     font-size: 50px;
+    z-index: 1;
   }
   .hero-banner-container h3 {
+    position: relative;
     font-size: 40px;
+    z-index: 1;
   }
   .hero-banner-container button {
     margin-top: 90px;
@@ -673,7 +677,7 @@ span.text-red {
     height: 350px;
   }
   .cart-container {
-    width: 415px;
+    width: auto;
     padding: 4px;
   }
   .cart-heading {
@@ -724,10 +728,7 @@ span.text-red {
   .total h3 {
     font-size: 20px;
   }
-  .track {
-    animation: marquee 10s linear infinite;
-    width: 550%;
-  }
+
   .success-wrapper,
   .cancel-wrapper {
     min-height: 69vh;
