--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import "https://unpkg.com/open-props";
+
 html,
 body,
 * {
@@ -607,6 +609,19 @@ span.text-red {
 }
 .product-max-qty {
   margin-top: 10px;
+}
+
+.media-scroller {
+  display: grid;
+  gap: var(--size-3);
+  grid-auto-flow: column;
+  grid-auto-columns: 21%;
+
+  overflow-x: auto;
+  overscroll-behavior-inline: contain;
+}
+
+.media-element {
 }
 
 @media screen and (max-width: 800px) {
